--- a/app/package.json
+++ b/app/package.json
@@ -10,28 +10,29 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@types/uuid": "^8.3.4",
-    "@vueuse/core": "^9.1.1",
-    "bulma": "^0.9.4",
-    "pinia": "^2.0.17",
-    "uuid": "^8.3.2",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "@types/uuid": "^10.0.0",
+    "@vueuse/core": "^12.0.0",
+    "bulma": "^1.0.2",
+    "pinia": "^2.3.0",
+    "uuid": "^11.0.3",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^16.11.47",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "eslint": "^8.21.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "@rushstack/eslint-patch": "^1.10.4",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/node": "^22.10.2",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.32.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "sass": "^1.54.5",
-    "typescript": "~4.7.4",
-    "vite": "^3.0.4",
-    "vue-tsc": "^0.39.5"
+    "prettier": "^3.4.2",
+    "sass": "^1.83.0",
+    "typescript": "~5.7.2",
+    "vite": "^6.0.5",
+    "vue-tsc": "^2.1.10"
   }
 }
